# abc-sg-broadband-chatbot

./: .gitignore  main.py  pyproject.toml  requirements.txt  ✎_New_chat.py
config/: agents.yaml  tasks.yaml
crew/: simple_crew.py
helper_functions/: llm.py  sqlite_fix.py  utility.py
logics/: customer_query_handler.py
pages/: 1_ⓘ_About_Us.py  2_모_Methodology.py
utils/: Copywriting_utils.py  auth_utils.py  copywriting_utils.py  crewai_utils.py  llm_utils.py  prompt_templates.py  streamlit_utils.py
zcrew/: simple_crew.py
