[project]
name = "week-08"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "pysqlite3-binary; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "crewai>=0.157.0",
    "crewai-tools>=0.60.0",
    "openai>=1.99.6",
    "streamlit>=1.48.0",
    "chromadb>=0.5.23",
]
